# idea-code

./: .env.example  .gitignore  BUG_LOG.md  CONVENTIONS.md  DESIGN.md  P  PROJECT_LOG.md  README.md  TODO.md  _e2e_complex.py  _e2e_devdoc.py  _e2e_research.py  project_review.md  pyproject.toml  report.md
.claude/skills/idea-code-docs/: SKILL.md
idea_code/: __init__.py  compact.py  config.py  context.py  logger.py  loop.py  main.py  orchestrator.py  review.py  state.py  subagent.py  tools.py  tracer.py  utils.py
idea_code/prompts/: manager.py
prompts/_shared/: compact_review_history.md
prompts/requirements-dev-doc/: builder-context.md  builder.md  config.json  reviewer-a-context.md  reviewer-a.md  reviewer-b.md  scoring-a.json  scoring-b.json
prompts/requirements-dev-plan/: builder-context.md  builder.md  config.json  reviewer-a.md  reviewer-b-context.md  reviewer-b.md  scoring-a.json  scoring-b.json
prompts/requirements-research/: builder-context.md  builder.md  config.json  reviewer-a-context.md  reviewer-a.md  reviewer-b.md  scoring-a.json  scoring-b.json
tests/: test_compact.py  test_e2e.py  test_integration.py  test_loop_subagent.py  test_prompt_manager.py  test_review.py  test_state.py  test_tools.py  test_tracer.py
